# zprolog

./: README.md  main.py  pyproject.toml
examples/: family.pl  kql.prolog  kusto_parent.csv
tests/: test_lexer.py  test_solver.py  test_unify.py  test_utils.py
zprolog/: kql.py  lexer.py  parser.py  program.py  solver.py
