[project]
name = "zprolog"
version = "0.1.0"
description = "A simple educational Prolog interpreter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-kusto-data>=6.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.4.2",
]

[tool.pyright]
typeCheckingMode = "basic"
